# forward

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake.py  setup.py
anita/: CMakeLists.txt  WaveletDeconvolution.cc  WaveletDeconvolution.h
include/forward/: forward.hpp
python/: CMakeLists.txt  PyForward.cpp
test/: CMakeLists.txt  test_deconvolve.py  test_forward.cpp
